--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.4",
+    "redux": "^4.0.0",
+    "redux-duck": "^1.0.2",
+    "redux-saga": "^0.16.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +27,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "redux-freeze": "^0.1.7",
+    "redux-logger": "^3.0.6",
+    "redux-saga-testing": "^1.0.5"
+  }
 }
