--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "2.0.4",
     "redux": "^4.0.0",
     "redux-duck": "^1.0.2",
-    "redux-saga": "^0.16.1"
+    "redux-saga": "^0.16.1",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
